<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_gravity="bottom"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content" >
	<View 
	    android:background="#FF33B5E5"
	    android:layout_width="fill_parent"
	    android:layout_height="3dp"
	    android:focusable="false"/>
	<LinearLayout 
	    android:orientation="horizontal" 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
	    <com.softwinner.view.MenuItem
	        android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:drawableTop="@drawable/sort"
			android:text="@string/sort"
			android:id="@+id/sort_button" 
			style="@style/menu_item"
			android:background="#00000000" 
			android:focusable="true"
			/>
	    <com.softwinner.view.MenuItem
	        android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:drawableTop="@drawable/copy"
			android:text="@string/copy"
			android:id="@+id/copy_button" 
			style="@style/menu_item"
			android:background="#00000000" 
			android:focusable="true"/>
	    <com.softwinner.view.MenuItem
	        android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:drawableTop="@drawable/paste"
			android:text="@string/paste"
			android:id="@+id/paste_button" 
			style="@style/menu_item"
			android:background="#00000000" 
			android:focusable="true"/>
	    <com.softwinner.view.MenuItem
	        android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:drawableTop="@drawable/cut"
			android:text="@string/cut"
			android:id="@+id/cut_button" 
			style="@style/menu_item"
			android:background="#00000000" 
			android:focusable="true"/>
	    <com.softwinner.view.MenuItem
	        android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:drawableTop="@drawable/delete"
			android:text="@string/delete"
			android:id="@+id/delete_button" 
			style="@style/menu_item"
			android:background="#00000000" 
			android:focusable="true"/>
	    <com.softwinner.view.MenuItem
	        android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:drawableTop="@drawable/rename"
			android:text="@string/rename"
			android:id="@+id/rename_button" 
			style="@style/menu_item"
			android:background="#00000000"
			android:focusable="true" />
		<com.softwinner.view.MenuItem
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:drawableTop="@drawable/mkdir"
			android:text="@string/mkdir"
			android:id="@+id/mkdir_button"
			style="@style/menu_item"
			android:background="#00000000"
			android:focusable="true" />
	</LinearLayout>
		
</LinearLayout>
<!--  
<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="horizontal"
	android:layout_gravity="bottom"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content" >
	<GridView
		android:id="@+id/gridview"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:numColumns="6"
		style="@style/dialog" />
		android:verticalSpacing="10dp"
		android:horizontalSpacing="10dp"
		android:stretchMode="columnWidth"
		android:layout_gravity="bottom"	
	
		
</LinearLayout>
-->