<?xml version="1.0" encoding="utf-8"?>
<!--
	FileManager,file manager for the android TVD
	 
 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@drawable/bg" >
		<!-- 按键菜单 -->
		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" >
			<com.softwinner.view.MyButton
			    style="@style/navigation" 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:drawableLeft="@drawable/menu_equipment"
				android:text="@string/equipment"
				android:id="@+id/device_button"
				android:background="#00000000"
				android:focusable="false"/>
			
			<!-- “设备”与其他四个过滤类型分开，以示区别 -->
			<!--
			<View 
			    android:layout_width="2dp"
			    android:layout_height="fill_parent"
			    android:background="@drawable/navigation_divider"
			    android:focusableInTouchMode="false"/>
			    -->
			<com.softwinner.view.MyButton
			    style="@style/navigation" 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1" 
				android:drawableLeft="@drawable/menu_video"
				android:text="@string/video"
				android:id="@+id/video_button"
				android:background="#00000000"
				android:focusable="false"/>
			<com.softwinner.view.MyButton
			    style="@style/navigation" 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:drawableLeft="@drawable/menu_picture"
				android:text="@string/picture"
				android:id="@+id/picture_button" 
				android:background="#00000000"
				android:focusable="false"/>
			<com.softwinner.view.MyButton
			    style="@style/navigation" 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:drawableLeft="@drawable/menu_music"
				android:text="@string/music"
				android:id="@+id/music_button" 
				android:background="#00000000"
				android:focusable="false"/>
			<com.softwinner.view.MyButton
			    style="@style/navigation" 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:drawableLeft="@drawable/menu_file"
				android:text="@string/file"
				android:id="@+id/file_button" 
				android:background="#00000000"
				android:focusable="false"/>
		</LinearLayout>  
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="3dp"
			android:background="#FF33B5E5" >
		</LinearLayout>
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="1dp"
			android:background="#FF262626" >
		</LinearLayout>
		<LinearLayout 
			android:orientation="horizontal"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:layout_weight="1" >
			<!-- 预览信息 -->
			<LinearLayout
				android:orientation="vertical"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:layout_weight="2" 
				android:focusableInTouchMode="false"
				android:focusable="false"
				android:layout_marginLeft="65dp"
				android:layout_marginRight="65dp"
				android:layout_marginTop="60dp" 
				android:layout_marginBottom="65dp" >
				<LinearLayout 
				    android:layout_width="fill_parent"
				    android:layout_height="fill_parent"
				    android:layout_weight="2"
				    android:background="@color/black"
				    android:id="@+id/thumb"
				    >
				    <ImageView
						android:layout_width="fill_parent"
						android:layout_height="fill_parent"
						android:layout_gravity="center"
						android:background="@drawable/thumbnail_bg"
						android:id="@+id/thumbnail" />
					<SurfaceView
						android:layout_width="fill_parent"
						android:layout_height="fill_parent"
						android:id="@+id/thumb_movie" 
						android:layout_gravity="center"
						android:visibility="gone" />
				</LinearLayout>
				<LinearLayout
					android:layout_width="fill_parent"
					android:layout_height="fill_parent"
					android:layout_weight="2">
					<TextView 
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:id="@+id/preview" 
						android:background="@drawable/preview"
						android:paddingTop="20dp"
						android:textSize="20sp" />
				</LinearLayout>
			</LinearLayout>
			<View
				android:layout_height="wrap_content"
				android:layout_width="4dp"
				android:background="@drawable/interval" />
			<!-- 列表信息 --> 
			<ListView
				android:layout_width="fill_parent"
    			android:layout_height="fill_parent"
    			android:layout_weight="1"
    			android:id="@+id/android:list" 
    			android:cacheColorHint="#00000000" 
    			android:divider="@drawable/divider"
    			android:layout_marginTop="50dp"
    			android:focusable="true" 
    			android:layout_marginLeft="25dp"
    			android:layout_marginRight="25dp"
				android:dividerHeight="1dp"
    			/>
		</LinearLayout>
		<RelativeLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" >
			<TextView
				android:id="@+id/path"
				android:layout_width="500dp"
				android:layout_height="wrap_content" 
				android:textSize="20sp" 
				android:singleLine="true"
				android:ellipsize="middle"/>
			<TextView
				android:id="@+id/index"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentRight="true"
				android:textSize="20sp"
				android:singleLine="true"/>
		</RelativeLayout>
	</LinearLayout>
